[project]
readme = "README.md"
requires-python = ">=3.8"
name = "life_expectancy"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "Ana Araújo<araujo.ana92@gmail.com>"}]
version = "0.1.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80
